spacing fixed

--- a/client/src/pages/Groups/GroupPage.scss
+++ b/client/src/pages/Groups/GroupPage.scss
@@ -66,6 +66,7 @@
                 font-weight: 200;
               }
               .downloadButton{
+                padding-top: 7px;
                 width: 80px;
                 height: 40px;
                 font-weight: 500;
